0.7/_sources/checks_gallery/tabular/data_integrity/plot_outlier_sample_detection.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/data_integrity/plot_outlier_sample_detection.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py:


Outlier Sample Detection
***************

This notebooks provides an overview for using and understanding the Outlier Sample Detection check.

**Structure:**

* `How deepchecks detects outliers <#How-deepchecks-detects-outliers>`__
* `Prepare data <#prepare-data>`__
* `Run the check <#run-the-check>`__
* `Define a condition <#define-a-condition>`__

How deepchecks detects outliers
========================
Outlier Sample Detection searches for outliers samples (jointly across all features) using the LoOP algorithm.
The LoOP algorithm is a robust method for detecting outliers in a dataset across multiple variables by comparing
the density in the area of a sample with the densities in the areas of its nearest neighbors
(see `link <https://www.dbs.ifi.lmu.de/Publikationen/Papers/LoOP1649.pdf>`_ for further details).

LoOP relies on a distance matrix. In our implementation we use the Gower distance that averages the distances
per feature between samples. For numeric features it calculates the absolute distance divided by the range of the
feature and for categorical features it is an indicator whether the values are the same
(see `link <https://www.jstor.org/stable/2528823>`_ for further details).

.. GENERATED FROM PYTHON SOURCE LINES 29-31

Imports
=======

.. GENERATED FROM PYTHON SOURCE LINES 31-38

.. code-block:: default


    import pandas as pd
    from sklearn.datasets import load_iris

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import OutlierSampleDetection








.. GENERATED FROM PYTHON SOURCE LINES 39-41

Prepare data
=========

.. GENERATED FROM PYTHON SOURCE LINES 41-45

.. code-block:: default


    iris = pd.DataFrame(load_iris().data)
    iris.describe()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>0</th>
          <th>1</th>
          <th>2</th>
          <th>3</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>count</th>
          <td>150.000000</td>
          <td>150.000000</td>
          <td>150.000000</td>
          <td>150.000000</td>
        </tr>
        <tr>
          <th>mean</th>
          <td>5.843333</td>
          <td>3.057333</td>
          <td>3.758000</td>
          <td>1.199333</td>
        </tr>
        <tr>
          <th>std</th>
          <td>0.828066</td>
          <td>0.435866</td>
          <td>1.765298</td>
          <td>0.762238</td>
        </tr>
        <tr>
          <th>min</th>
          <td>4.300000</td>
          <td>2.000000</td>
          <td>1.000000</td>
          <td>0.100000</td>
        </tr>
        <tr>
          <th>25%</th>
          <td>5.100000</td>
          <td>2.800000</td>
          <td>1.600000</td>
          <td>0.300000</td>
        </tr>
        <tr>
          <th>50%</th>
          <td>5.800000</td>
          <td>3.000000</td>
          <td>4.350000</td>
          <td>1.300000</td>
        </tr>
        <tr>
          <th>75%</th>
          <td>6.400000</td>
          <td>3.300000</td>
          <td>5.100000</td>
          <td>1.800000</td>
        </tr>
        <tr>
          <th>max</th>
          <td>7.900000</td>
          <td>4.400000</td>
          <td>6.900000</td>
          <td>2.500000</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 46-47

Add an outlier:

.. GENERATED FROM PYTHON SOURCE LINES 47-53

.. code-block:: default


    outlier_sample = [1, 10, 50, 100]
    iris.loc[len(iris.index)] = outlier_sample
    print(iris.tail())
    modified_iris = Dataset(iris, cat_features=[])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

           0     1     2      3
    146  6.3   2.5   5.0    1.9
    147  6.5   3.0   5.2    2.0
    148  6.2   3.4   5.4    2.3
    149  5.9   3.0   5.1    1.8
    150  1.0  10.0  50.0  100.0




.. GENERATED FROM PYTHON SOURCE LINES 54-57

Run the Check
=============
We define the nearest_neighbors_percent and the extent parameters for the LoOP algorithm.

.. GENERATED FROM PYTHON SOURCE LINES 57-61

.. code-block:: default


    check = OutlierSampleDetection(nearest_neighbors_percent=0.01, extent_parameter=3)
    check.run(modified_iris)






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Outlier Sample Detection</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "ab62afff800b48b0ac9de66ac453bf10": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_97178129df624740807dabfbd68dceb4",
              "IPY_MODEL_1bdb438711aa45bc9b5eb0fde515cb4a",
              "IPY_MODEL_40f56d3cd4d345aeb215b1585c5d9ee0",
              "IPY_MODEL_f5d5a2d4df7a41d0a2606a7aa714d87b"
            ],
            "layout": "IPY_MODEL_f3eae72a081d47bd87c98b3bdc1e73f0"
          }
        },
        "97178129df624740807dabfbd68dceb4": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_ddbe706d18b34bd3a384055d7b6c4b99",
            "style": "IPY_MODEL_cac9abae071d4960852c4b5984054d79",
            "value": "<h4><b>Outlier Sample Detection</b></h4>"
          }
        },
        "ddbe706d18b34bd3a384055d7b6c4b99": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "cac9abae071d4960852c4b5984054d79": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "1bdb438711aa45bc9b5eb0fde515cb4a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e44229e3d6974c1999d4638c74fb817d",
            "style": "IPY_MODEL_0baf1682db764006be3cb9363d96b0e5",
            "value": "<p>Detects outliers in a dataset using the LoOP algorithm.</p>"
          }
        },
        "e44229e3d6974c1999d4638c74fb817d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "0baf1682db764006be3cb9363d96b0e5": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "40f56d3cd4d345aeb215b1585c5d9ee0": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_6fd46999e5ea453093281b184b1a379c",
            "style": "IPY_MODEL_30bf6a5305584fa4abd6dfb57c01b78b"
          }
        },
        "6fd46999e5ea453093281b184b1a379c": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "30bf6a5305584fa4abd6dfb57c01b78b": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "f5d5a2d4df7a41d0a2606a7aa714d87b": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_495df1accdee4494a9bd3720adf1b5d5",
              "IPY_MODEL_9b00f74c661749d9a5ddef96ffd63ceb",
              "IPY_MODEL_d192fbe5d2774498b69a454187b295f0"
            ],
            "layout": "IPY_MODEL_af4e2a6db60e487a8e4bbe874d452a8a"
          }
        },
        "495df1accdee4494a9bd3720adf1b5d5": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c9210b14abcc4484914af0efb29cc69a",
            "style": "IPY_MODEL_c80ce508b9f44e40bc1bf1258bd4909e",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "c9210b14abcc4484914af0efb29cc69a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c80ce508b9f44e40bc1bf1258bd4909e": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "9b00f74c661749d9a5ddef96ffd63ceb": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_1c18ebd1fb974f769f3f2057aed89531",
            "style": "IPY_MODEL_1af1533ba43a4723a2dec266b464a839",
            "value": "<div><span>\n                    The Outlier Probability Score is calculated by the LoOP algorithm which measures the local deviation\n                    of density of a given sample with respect to its neighbors. These outlier scores are directly\n                    interpretable as a probability of an object being an outlier (see\n                    <a href=\"https://www.dbs.ifi.lmu.de/Publikationen/Papers/LoOP1649.pdf\"\n                    target=\"_blank\" rel=\"noopener noreferrer\">link</a> for more information).<br><br>\n                    </span></div>"
          }
        },
        "1c18ebd1fb974f769f3f2057aed89531": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "1af1533ba43a4723a2dec266b464a839": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "d192fbe5d2774498b69a454187b295f0": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e365dccbcaa9456cb09545410276c7f7",
            "style": "IPY_MODEL_ea2fb244cc77425b829c4a225c179a4b",
            "value": "<style type=\"text/css\">\n#T_d82ac_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_d82ac_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_d82ac_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_d82ac_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_d82ac_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_d82ac_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Outlier Probability Score</th>\n      <th class=\"col_heading level0 col1\" >0</th>\n      <th class=\"col_heading level0 col2\" >1</th>\n      <th class=\"col_heading level0 col3\" >2</th>\n      <th class=\"col_heading level0 col4\" >3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_d82ac_level0_row0\" class=\"row_heading level0 row0\" >150</th>\n      <td id=\"T_d82ac_row0_col0\" class=\"data row0 col0\" >1.00</td>\n      <td id=\"T_d82ac_row0_col1\" class=\"data row0 col1\" >1.00</td>\n      <td id=\"T_d82ac_row0_col2\" class=\"data row0 col2\" >10.00</td>\n      <td id=\"T_d82ac_row0_col3\" class=\"data row0 col3\" >50.00</td>\n      <td id=\"T_d82ac_row0_col4\" class=\"data row0 col4\" >100.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_d82ac_level0_row1\" class=\"row_heading level0 row1\" >41</th>\n      <td id=\"T_d82ac_row1_col0\" class=\"data row1 col0\" >0.67</td>\n      <td id=\"T_d82ac_row1_col1\" class=\"data row1 col1\" >4.50</td>\n      <td id=\"T_d82ac_row1_col2\" class=\"data row1 col2\" >2.30</td>\n      <td id=\"T_d82ac_row1_col3\" class=\"data row1 col3\" >1.30</td>\n      <td id=\"T_d82ac_row1_col4\" class=\"data row1 col4\" >0.30</td>\n    </tr>\n    <tr>\n      <th id=\"T_d82ac_level0_row2\" class=\"row_heading level0 row2\" >108</th>\n      <td id=\"T_d82ac_row2_col0\" class=\"data row2 col0\" >0.50</td>\n      <td id=\"T_d82ac_row2_col1\" class=\"data row2 col1\" >6.70</td>\n      <td id=\"T_d82ac_row2_col2\" class=\"data row2 col2\" >2.50</td>\n      <td id=\"T_d82ac_row2_col3\" class=\"data row2 col3\" >5.80</td>\n      <td id=\"T_d82ac_row2_col4\" class=\"data row2 col4\" >1.80</td>\n    </tr>\n    <tr>\n      <th id=\"T_d82ac_level0_row3\" class=\"row_heading level0 row3\" >109</th>\n      <td id=\"T_d82ac_row3_col0\" class=\"data row3 col0\" >0.50</td>\n      <td id=\"T_d82ac_row3_col1\" class=\"data row3 col1\" >7.20</td>\n      <td id=\"T_d82ac_row3_col2\" class=\"data row3 col2\" >3.60</td>\n      <td id=\"T_d82ac_row3_col3\" class=\"data row3 col3\" >6.10</td>\n      <td id=\"T_d82ac_row3_col4\" class=\"data row3 col4\" >2.50</td>\n    </tr>\n    <tr>\n      <th id=\"T_d82ac_level0_row4\" class=\"row_heading level0 row4\" >22</th>\n      <td id=\"T_d82ac_row4_col0\" class=\"data row4 col0\" >0.44</td>\n      <td id=\"T_d82ac_row4_col1\" class=\"data row4 col1\" >4.60</td>\n      <td id=\"T_d82ac_row4_col2\" class=\"data row4 col2\" >3.60</td>\n      <td id=\"T_d82ac_row4_col3\" class=\"data row4 col3\" >1.00</td>\n      <td id=\"T_d82ac_row4_col4\" class=\"data row4 col4\" >0.20</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "e365dccbcaa9456cb09545410276c7f7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "ea2fb244cc77425b829c4a225c179a4b": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "af4e2a6db60e487a8e4bbe874d452a8a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "f3eae72a081d47bd87c98b3bdc1e73f0": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "ab62afff800b48b0ac9de66ac453bf10"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 62-65

Define a condition
==================
Now, we define a condition that enforces that the ratio of outlier samples in out dataset is below 0.001.

.. GENERATED FROM PYTHON SOURCE LINES 65-68

.. code-block:: default


    check = OutlierSampleDetection()
    check.add_condition_outlier_ratio_not_greater_than(max_outliers_ratio=0.001, outlier_score_threshold=0.9)
    check.run(modified_iris)




.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Outlier Sample Detection</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "d89baccef0f84ad285b793cead973a34": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_e7d7ccb6a41f46f2ade9146c461c02f3",
              "IPY_MODEL_0ee1d100605743259e04c8f1caaf934d",
              "IPY_MODEL_0e49740d4fa2467caa5a131923e30177",
              "IPY_MODEL_9c7845e3d5eb4a428d8fb1f963c9d3cb"
            ],
            "layout": "IPY_MODEL_55e9646b11304210af01bf62056f1ee8"
          }
        },
        "e7d7ccb6a41f46f2ade9146c461c02f3": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_7bc1b1119cf24774803cfe01b7e4f9c5",
            "style": "IPY_MODEL_17fd7e0f89a349e2b9e5f83eb32b736a",
            "value": "<h4><b>Outlier Sample Detection</b></h4>"
          }
        },
        "7bc1b1119cf24774803cfe01b7e4f9c5": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "17fd7e0f89a349e2b9e5f83eb32b736a": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "0ee1d100605743259e04c8f1caaf934d": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_8da75f5e8ccb45bd9b99640954b1f1e0",
            "style": "IPY_MODEL_37cebf09ca424bdfa062db49594d5ab7",
            "value": "<p>Detects outliers in a dataset using the LoOP algorithm.</p>"
          }
        },
        "8da75f5e8ccb45bd9b99640954b1f1e0": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "37cebf09ca424bdfa062db49594d5ab7": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "0e49740d4fa2467caa5a131923e30177": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_992960a8dc394f88aab1ee28e35df5d7",
            "style": "IPY_MODEL_f811e9f5efad4d67af10ba9871faa412",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_1a3c4_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1a3c4_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1a3c4_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1a3c4_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_1a3c4_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_1a3c4_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_1a3c4_row0_col0\" class=\"data row0 col0\" ><div style=\"color: orange;text-align: center;font-weight:bold\">!</div></td>\n      <td id=\"T_1a3c4_row0_col1\" class=\"data row0 col1\" >Not more than 0.1% of dataset over outlier score 0.9</td>\n      <td id=\"T_1a3c4_row0_col2\" class=\"data row0 col2\" >0.6% of dataset samples above outlier threshold</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "992960a8dc394f88aab1ee28e35df5d7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "f811e9f5efad4d67af10ba9871faa412": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "9c7845e3d5eb4a428d8fb1f963c9d3cb": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_31a1aedacf494a8ab2045998541b026e",
              "IPY_MODEL_9c80ef26e2c249219314d5a2b30f43d9",
              "IPY_MODEL_0a5564100742460a8c0f5d4ff542da4f"
            ],
            "layout": "IPY_MODEL_cf040f8698674ce1874d24bf95cb3d24"
          }
        },
        "31a1aedacf494a8ab2045998541b026e": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_b079157e9ce34808b1e317a78ff0b128",
            "style": "IPY_MODEL_c1cf2f3a7c344ccea22a042f667f71ca",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "b079157e9ce34808b1e317a78ff0b128": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "c1cf2f3a7c344ccea22a042f667f71ca": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "9c80ef26e2c249219314d5a2b30f43d9": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_0813156b40924770982bc9cbdb7a9e2c",
            "style": "IPY_MODEL_043d08a7bc284fe2b4f07c50e69f0eb5",
            "value": "<div><span>\n                    The Outlier Probability Score is calculated by the LoOP algorithm which measures the local deviation\n                    of density of a given sample with respect to its neighbors. These outlier scores are directly\n                    interpretable as a probability of an object being an outlier (see\n                    <a href=\"https://www.dbs.ifi.lmu.de/Publikationen/Papers/LoOP1649.pdf\"\n                    target=\"_blank\" rel=\"noopener noreferrer\">link</a> for more information).<br><br>\n                    </span></div>"
          }
        },
        "0813156b40924770982bc9cbdb7a9e2c": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "043d08a7bc284fe2b4f07c50e69f0eb5": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "0a5564100742460a8c0f5d4ff542da4f": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_c8778b3aeb9849499c3135b69990c875",
            "style": "IPY_MODEL_d51d5e5d2d0a496f8a8932abf0ef6e57",
            "value": "<style type=\"text/css\">\n#T_cfef6_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_cfef6_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_cfef6_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_cfef6_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_cfef6_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_cfef6_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Outlier Probability Score</th>\n      <th class=\"col_heading level0 col1\" >0</th>\n      <th class=\"col_heading level0 col2\" >1</th>\n      <th class=\"col_heading level0 col3\" >2</th>\n      <th class=\"col_heading level0 col4\" >3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_cfef6_level0_row0\" class=\"row_heading level0 row0\" >150</th>\n      <td id=\"T_cfef6_row0_col0\" class=\"data row0 col0\" >1.00</td>\n      <td id=\"T_cfef6_row0_col1\" class=\"data row0 col1\" >1.00</td>\n      <td id=\"T_cfef6_row0_col2\" class=\"data row0 col2\" >10.00</td>\n      <td id=\"T_cfef6_row0_col3\" class=\"data row0 col3\" >50.00</td>\n      <td id=\"T_cfef6_row0_col4\" class=\"data row0 col4\" >100.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_cfef6_level0_row1\" class=\"row_heading level0 row1\" >41</th>\n      <td id=\"T_cfef6_row1_col0\" class=\"data row1 col0\" >0.67</td>\n      <td id=\"T_cfef6_row1_col1\" class=\"data row1 col1\" >4.50</td>\n      <td id=\"T_cfef6_row1_col2\" class=\"data row1 col2\" >2.30</td>\n      <td id=\"T_cfef6_row1_col3\" class=\"data row1 col3\" >1.30</td>\n      <td id=\"T_cfef6_row1_col4\" class=\"data row1 col4\" >0.30</td>\n    </tr>\n    <tr>\n      <th id=\"T_cfef6_level0_row2\" class=\"row_heading level0 row2\" >108</th>\n      <td id=\"T_cfef6_row2_col0\" class=\"data row2 col0\" >0.50</td>\n      <td id=\"T_cfef6_row2_col1\" class=\"data row2 col1\" >6.70</td>\n      <td id=\"T_cfef6_row2_col2\" class=\"data row2 col2\" >2.50</td>\n      <td id=\"T_cfef6_row2_col3\" class=\"data row2 col3\" >5.80</td>\n      <td id=\"T_cfef6_row2_col4\" class=\"data row2 col4\" >1.80</td>\n    </tr>\n    <tr>\n      <th id=\"T_cfef6_level0_row3\" class=\"row_heading level0 row3\" >109</th>\n      <td id=\"T_cfef6_row3_col0\" class=\"data row3 col0\" >0.50</td>\n      <td id=\"T_cfef6_row3_col1\" class=\"data row3 col1\" >7.20</td>\n      <td id=\"T_cfef6_row3_col2\" class=\"data row3 col2\" >3.60</td>\n      <td id=\"T_cfef6_row3_col3\" class=\"data row3 col3\" >6.10</td>\n      <td id=\"T_cfef6_row3_col4\" class=\"data row3 col4\" >2.50</td>\n    </tr>\n    <tr>\n      <th id=\"T_cfef6_level0_row4\" class=\"row_heading level0 row4\" >22</th>\n      <td id=\"T_cfef6_row4_col0\" class=\"data row4 col0\" >0.44</td>\n      <td id=\"T_cfef6_row4_col1\" class=\"data row4 col1\" >4.60</td>\n      <td id=\"T_cfef6_row4_col2\" class=\"data row4 col2\" >3.60</td>\n      <td id=\"T_cfef6_row4_col3\" class=\"data row4 col3\" >1.00</td>\n      <td id=\"T_cfef6_row4_col4\" class=\"data row4 col4\" >0.20</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "c8778b3aeb9849499c3135b69990c875": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "d51d5e5d2d0a496f8a8932abf0ef6e57": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "cf040f8698674ce1874d24bf95cb3d24": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "55e9646b11304210af01bf62056f1ee8": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "d89baccef0f84ad285b793cead973a34"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.135 seconds)


.. _sphx_glr_download_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_outlier_sample_detection.py <plot_outlier_sample_detection.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_outlier_sample_detection.ipynb <plot_outlier_sample_detection.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
