0.8/_sources/checks_gallery/tabular/data_integrity/plot_outlier_sample_detection.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/data_integrity/plot_outlier_sample_detection.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py:


.. _plot_tabular_outlier_sample_detection:

Outlier Sample Detection
************************

This notebooks provides an overview for using and understanding the Outlier Sample Detection check.

**Structure:**

* `How deepchecks detects outliers <#How-deepchecks-detects-outliers>`__
* `Prepare data <#prepare-data>`__
* `Run the check <#run-the-check>`__
* `Define a condition <#define-a-condition>`__

How deepchecks detects outliers
===============================

Outlier Sample Detection searches for outliers samples (jointly across all features) using the LoOP algorithm.
The LoOP algorithm is a robust method for detecting outliers in a dataset across multiple variables by comparing
the density in the area of a sample with the densities in the areas of its nearest neighbors
(see `link <https://www.dbs.ifi.lmu.de/Publikationen/Papers/LoOP1649.pdf>`_ for further details).

LoOP relies on a distance matrix. In our implementation we use the Gower distance that averages the distances
per feature between samples. For numeric features it calculates the absolute distance divided by the range of the
feature and for categorical features it is an indicator whether the values are the same
(see `link <https://www.jstor.org/stable/2528823>`_ for further details).

.. GENERATED FROM PYTHON SOURCE LINES 32-34

Imports
=======

.. GENERATED FROM PYTHON SOURCE LINES 34-41

.. code-block:: default


    import pandas as pd
    from sklearn.datasets import load_iris

    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import OutlierSampleDetection








.. GENERATED FROM PYTHON SOURCE LINES 42-44

Prepare data
============

.. GENERATED FROM PYTHON SOURCE LINES 44-48

.. code-block:: default


    iris = pd.DataFrame(load_iris().data)
    iris.describe()






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div>
    <style scoped>
        .dataframe tbody tr th:only-of-type {
            vertical-align: middle;
        }

        .dataframe tbody tr th {
            vertical-align: top;
        }

        .dataframe thead th {
            text-align: right;
        }
    </style>
    <table border="1" class="dataframe">
      <thead>
        <tr style="text-align: right;">
          <th></th>
          <th>0</th>
          <th>1</th>
          <th>2</th>
          <th>3</th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th>count</th>
          <td>150.000000</td>
          <td>150.000000</td>
          <td>150.000000</td>
          <td>150.000000</td>
        </tr>
        <tr>
          <th>mean</th>
          <td>5.843333</td>
          <td>3.057333</td>
          <td>3.758000</td>
          <td>1.199333</td>
        </tr>
        <tr>
          <th>std</th>
          <td>0.828066</td>
          <td>0.435866</td>
          <td>1.765298</td>
          <td>0.762238</td>
        </tr>
        <tr>
          <th>min</th>
          <td>4.300000</td>
          <td>2.000000</td>
          <td>1.000000</td>
          <td>0.100000</td>
        </tr>
        <tr>
          <th>25%</th>
          <td>5.100000</td>
          <td>2.800000</td>
          <td>1.600000</td>
          <td>0.300000</td>
        </tr>
        <tr>
          <th>50%</th>
          <td>5.800000</td>
          <td>3.000000</td>
          <td>4.350000</td>
          <td>1.300000</td>
        </tr>
        <tr>
          <th>75%</th>
          <td>6.400000</td>
          <td>3.300000</td>
          <td>5.100000</td>
          <td>1.800000</td>
        </tr>
        <tr>
          <th>max</th>
          <td>7.900000</td>
          <td>4.400000</td>
          <td>6.900000</td>
          <td>2.500000</td>
        </tr>
      </tbody>
    </table>
    </div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 49-50

Add an outlier:

.. GENERATED FROM PYTHON SOURCE LINES 50-56

.. code-block:: default


    outlier_sample = [1, 10, 50, 100]
    iris.loc[len(iris.index)] = outlier_sample
    print(iris.tail())
    modified_iris = Dataset(iris, cat_features=[])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

           0     1     2      3
    146  6.3   2.5   5.0    1.9
    147  6.5   3.0   5.2    2.0
    148  6.2   3.4   5.4    2.3
    149  5.9   3.0   5.1    1.8
    150  1.0  10.0  50.0  100.0




.. GENERATED FROM PYTHON SOURCE LINES 57-60

Run the Check
=============
We define the nearest_neighbors_percent and the extent parameters for the LoOP algorithm.

.. GENERATED FROM PYTHON SOURCE LINES 60-64

.. code-block:: default


    check = OutlierSampleDetection(nearest_neighbors_percent=0.01, extent_parameter=3)
    check.run(modified_iris)






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Outlier Sample Detection</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "994e8018caaf469096390842e47a7d20": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_f286fca275114a189299163e02076340",
              "IPY_MODEL_fd2eb0d648a74450a81ec38cfc3e1dce",
              "IPY_MODEL_e92050e232704a3398305f6475bc30ab",
              "IPY_MODEL_b72ee04d6af44022826defe7b900eb8b"
            ],
            "layout": "IPY_MODEL_0f07e73102484e068959f3651ca0b3a7"
          }
        },
        "f286fca275114a189299163e02076340": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_5279910781484a009acb7ab563d2bf3a",
            "style": "IPY_MODEL_599ab285feda4633abd10b2d77614618",
            "value": "<h4><b>Outlier Sample Detection</b></h4>"
          }
        },
        "5279910781484a009acb7ab563d2bf3a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "599ab285feda4633abd10b2d77614618": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "fd2eb0d648a74450a81ec38cfc3e1dce": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_4d838860425541a89ddaed0e66fe4785",
            "style": "IPY_MODEL_cb4940d2219742cd9937c367aa0fe6a6",
            "value": "<p>Detects outliers in a dataset using the LoOP algorithm.</p>"
          }
        },
        "4d838860425541a89ddaed0e66fe4785": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "cb4940d2219742cd9937c367aa0fe6a6": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "e92050e232704a3398305f6475bc30ab": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_22778b34c4b3441cabe4fa30845f0fe7",
            "style": "IPY_MODEL_4e4c89738c644bb1bfaf8647d64bb92d"
          }
        },
        "22778b34c4b3441cabe4fa30845f0fe7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "4e4c89738c644bb1bfaf8647d64bb92d": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b72ee04d6af44022826defe7b900eb8b": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_d8e3f81f9d464df7ac46bdb8509b8ec3",
              "IPY_MODEL_0ebad6c2e17e4f2faf4cb9bee05afe7a",
              "IPY_MODEL_78c3367dbf3b49cfb0bd02f134072fb8"
            ],
            "layout": "IPY_MODEL_d90bc52eaa10403189eac434e282c9f2"
          }
        },
        "d8e3f81f9d464df7ac46bdb8509b8ec3": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_e688b56fa9134041909ae63dc171632a",
            "style": "IPY_MODEL_313af632b3944a809c0c4722ec4d750c",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "e688b56fa9134041909ae63dc171632a": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "313af632b3944a809c0c4722ec4d750c": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "0ebad6c2e17e4f2faf4cb9bee05afe7a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_ffe3cd4cb5dd4e60af25daadb4a4bbca",
            "style": "IPY_MODEL_29312b69d5df4a26a945c77c624ac289",
            "value": "<div><span>\n                    The Outlier Probability Score is calculated by the LoOP algorithm which measures the local deviation\n                    of density of a given sample with respect to its neighbors. These outlier scores are directly\n                    interpretable as a probability of an object being an outlier (see\n                    <a href=\"https://www.dbs.ifi.lmu.de/Publikationen/Papers/LoOP1649.pdf\"\n                    target=\"_blank\" rel=\"noopener noreferrer\">link</a> for more information).<br><br>\n                    </span></div>"
          }
        },
        "ffe3cd4cb5dd4e60af25daadb4a4bbca": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "29312b69d5df4a26a945c77c624ac289": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "78c3367dbf3b49cfb0bd02f134072fb8": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_6b4e60d8e3404a3b9937b512094fc1e7",
            "style": "IPY_MODEL_1a7c53f2f05d454086f318534b6a1730",
            "value": "<style type=\"text/css\">\n#T_e1123_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e1123_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e1123_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e1123_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_e1123_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_e1123_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Outlier Probability Score</th>\n      <th class=\"col_heading level0 col1\" >0</th>\n      <th class=\"col_heading level0 col2\" >1</th>\n      <th class=\"col_heading level0 col3\" >2</th>\n      <th class=\"col_heading level0 col4\" >3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_e1123_level0_row0\" class=\"row_heading level0 row0\" >150</th>\n      <td id=\"T_e1123_row0_col0\" class=\"data row0 col0\" >1.00</td>\n      <td id=\"T_e1123_row0_col1\" class=\"data row0 col1\" >1.00</td>\n      <td id=\"T_e1123_row0_col2\" class=\"data row0 col2\" >10.00</td>\n      <td id=\"T_e1123_row0_col3\" class=\"data row0 col3\" >50.00</td>\n      <td id=\"T_e1123_row0_col4\" class=\"data row0 col4\" >100.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_e1123_level0_row1\" class=\"row_heading level0 row1\" >41</th>\n      <td id=\"T_e1123_row1_col0\" class=\"data row1 col0\" >0.67</td>\n      <td id=\"T_e1123_row1_col1\" class=\"data row1 col1\" >4.50</td>\n      <td id=\"T_e1123_row1_col2\" class=\"data row1 col2\" >2.30</td>\n      <td id=\"T_e1123_row1_col3\" class=\"data row1 col3\" >1.30</td>\n      <td id=\"T_e1123_row1_col4\" class=\"data row1 col4\" >0.30</td>\n    </tr>\n    <tr>\n      <th id=\"T_e1123_level0_row2\" class=\"row_heading level0 row2\" >108</th>\n      <td id=\"T_e1123_row2_col0\" class=\"data row2 col0\" >0.50</td>\n      <td id=\"T_e1123_row2_col1\" class=\"data row2 col1\" >6.70</td>\n      <td id=\"T_e1123_row2_col2\" class=\"data row2 col2\" >2.50</td>\n      <td id=\"T_e1123_row2_col3\" class=\"data row2 col3\" >5.80</td>\n      <td id=\"T_e1123_row2_col4\" class=\"data row2 col4\" >1.80</td>\n    </tr>\n    <tr>\n      <th id=\"T_e1123_level0_row3\" class=\"row_heading level0 row3\" >109</th>\n      <td id=\"T_e1123_row3_col0\" class=\"data row3 col0\" >0.50</td>\n      <td id=\"T_e1123_row3_col1\" class=\"data row3 col1\" >7.20</td>\n      <td id=\"T_e1123_row3_col2\" class=\"data row3 col2\" >3.60</td>\n      <td id=\"T_e1123_row3_col3\" class=\"data row3 col3\" >6.10</td>\n      <td id=\"T_e1123_row3_col4\" class=\"data row3 col4\" >2.50</td>\n    </tr>\n    <tr>\n      <th id=\"T_e1123_level0_row4\" class=\"row_heading level0 row4\" >22</th>\n      <td id=\"T_e1123_row4_col0\" class=\"data row4 col0\" >0.44</td>\n      <td id=\"T_e1123_row4_col1\" class=\"data row4 col1\" >4.60</td>\n      <td id=\"T_e1123_row4_col2\" class=\"data row4 col2\" >3.60</td>\n      <td id=\"T_e1123_row4_col3\" class=\"data row4 col3\" >1.00</td>\n      <td id=\"T_e1123_row4_col4\" class=\"data row4 col4\" >0.20</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "6b4e60d8e3404a3b9937b512094fc1e7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "1a7c53f2f05d454086f318534b6a1730": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "d90bc52eaa10403189eac434e282c9f2": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "0f07e73102484e068959f3651ca0b3a7": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "994e8018caaf469096390842e47a7d20"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 65-68

Define a condition
==================
Now, we define a condition that enforces that the ratio of outlier samples in out dataset is below 0.001.

.. GENERATED FROM PYTHON SOURCE LINES 68-71

.. code-block:: default


    check = OutlierSampleDetection()
    check.add_condition_outlier_ratio_less_or_equal(max_outliers_ratio=0.001, outlier_score_threshold=0.9)
    check.run(modified_iris)




.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Outlier Sample Detection</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "a689f5ff46d449efb8e4231627af729d": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html",
              "jp-RenderedHTMLCommon",
              "jp-RenderedHTML",
              "jp-OutputArea-output"
            ],
            "children": [
              "IPY_MODEL_125e2a94b3c24590998dfe58843a13fc",
              "IPY_MODEL_4b85feeba2f948c49867c84a10493a9a",
              "IPY_MODEL_9714fe03a157405c8a2d7c5e140b3e8e",
              "IPY_MODEL_525da78d0f2c4141a06c82f68df67c0a"
            ],
            "layout": "IPY_MODEL_83a498bf8d3f45879435efe3cc46556c"
          }
        },
        "125e2a94b3c24590998dfe58843a13fc": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_d4cf3020cf924163a2954b0ac645d662",
            "style": "IPY_MODEL_275c337415b3405a8da206016ecfbcb6",
            "value": "<h4><b>Outlier Sample Detection</b></h4>"
          }
        },
        "d4cf3020cf924163a2954b0ac645d662": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "275c337415b3405a8da206016ecfbcb6": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "4b85feeba2f948c49867c84a10493a9a": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_2280ad6d573f4750ae4cf3242eaab3f0",
            "style": "IPY_MODEL_36d1e7accbcd4bb29ab1ca37ba4e3c98",
            "value": "<p>Detects outliers in a dataset using the LoOP algorithm.</p>"
          }
        },
        "2280ad6d573f4750ae4cf3242eaab3f0": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "36d1e7accbcd4bb29ab1ca37ba4e3c98": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "9714fe03a157405c8a2d7c5e140b3e8e": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_3e5be48189bb4c0289568f944860279d",
            "style": "IPY_MODEL_f2dbd11dfbe644dc9e52ee9a769ed45b",
            "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_5ece6_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5ece6_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5ece6_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5ece6_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_5ece6_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_5ece6_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_5ece6_row0_col0\" class=\"data row0 col0\" ><div style=\"color: orange;text-align: center;font-weight:bold\">!</div></td>\n      <td id=\"T_5ece6_row0_col1\" class=\"data row0 col1\" >Ratio of samples exceeding the outlier score threshold 0.9 is less or equal to 0.1%</td>\n      <td id=\"T_5ece6_row0_col2\" class=\"data row0 col2\" >0.6% of dataset samples above outlier threshold</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "3e5be48189bb4c0289568f944860279d": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "f2dbd11dfbe644dc9e52ee9a769ed45b": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "525da78d0f2c4141a06c82f68df67c0a": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "children": [
              "IPY_MODEL_d3cbd0cc6468438fb56ff233cb92c478",
              "IPY_MODEL_9a045d43f22a4a6b8142d4896d316f45",
              "IPY_MODEL_a3471a7409b041628f2ff17a81499b38"
            ],
            "layout": "IPY_MODEL_e5bcce70584e42ccbfd253c4ff23ca04"
          }
        },
        "d3cbd0cc6468438fb56ff233cb92c478": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_73fd9d0326b54b70a1c01784e5174343",
            "style": "IPY_MODEL_4b7a6bbcad554635ab887eae80268dcc",
            "value": "<h5><b>Additional Outputs</b></h5>"
          }
        },
        "73fd9d0326b54b70a1c01784e5174343": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "4b7a6bbcad554635ab887eae80268dcc": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "9a045d43f22a4a6b8142d4896d316f45": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_a0636b10dab14d9baa593d1fcfd03bbc",
            "style": "IPY_MODEL_9c10622bf12a4277839fa5e09dab9bce",
            "value": "<div><span>\n                    The Outlier Probability Score is calculated by the LoOP algorithm which measures the local deviation\n                    of density of a given sample with respect to its neighbors. These outlier scores are directly\n                    interpretable as a probability of an object being an outlier (see\n                    <a href=\"https://www.dbs.ifi.lmu.de/Publikationen/Papers/LoOP1649.pdf\"\n                    target=\"_blank\" rel=\"noopener noreferrer\">link</a> for more information).<br><br>\n                    </span></div>"
          }
        },
        "a0636b10dab14d9baa593d1fcfd03bbc": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "9c10622bf12a4277839fa5e09dab9bce": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "a3471a7409b041628f2ff17a81499b38": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_ba4bf2c99a1547d29437c5ae0d168e14",
            "style": "IPY_MODEL_980c12756df3430fb85e40d1a86d6b45",
            "value": "<style type=\"text/css\">\n#T_ea6b1_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ea6b1_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ea6b1_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ea6b1_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_ea6b1_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_ea6b1_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >Outlier Probability Score</th>\n      <th class=\"col_heading level0 col1\" >0</th>\n      <th class=\"col_heading level0 col2\" >1</th>\n      <th class=\"col_heading level0 col3\" >2</th>\n      <th class=\"col_heading level0 col4\" >3</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_ea6b1_level0_row0\" class=\"row_heading level0 row0\" >150</th>\n      <td id=\"T_ea6b1_row0_col0\" class=\"data row0 col0\" >1.00</td>\n      <td id=\"T_ea6b1_row0_col1\" class=\"data row0 col1\" >1.00</td>\n      <td id=\"T_ea6b1_row0_col2\" class=\"data row0 col2\" >10.00</td>\n      <td id=\"T_ea6b1_row0_col3\" class=\"data row0 col3\" >50.00</td>\n      <td id=\"T_ea6b1_row0_col4\" class=\"data row0 col4\" >100.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_ea6b1_level0_row1\" class=\"row_heading level0 row1\" >41</th>\n      <td id=\"T_ea6b1_row1_col0\" class=\"data row1 col0\" >0.67</td>\n      <td id=\"T_ea6b1_row1_col1\" class=\"data row1 col1\" >4.50</td>\n      <td id=\"T_ea6b1_row1_col2\" class=\"data row1 col2\" >2.30</td>\n      <td id=\"T_ea6b1_row1_col3\" class=\"data row1 col3\" >1.30</td>\n      <td id=\"T_ea6b1_row1_col4\" class=\"data row1 col4\" >0.30</td>\n    </tr>\n    <tr>\n      <th id=\"T_ea6b1_level0_row2\" class=\"row_heading level0 row2\" >108</th>\n      <td id=\"T_ea6b1_row2_col0\" class=\"data row2 col0\" >0.50</td>\n      <td id=\"T_ea6b1_row2_col1\" class=\"data row2 col1\" >6.70</td>\n      <td id=\"T_ea6b1_row2_col2\" class=\"data row2 col2\" >2.50</td>\n      <td id=\"T_ea6b1_row2_col3\" class=\"data row2 col3\" >5.80</td>\n      <td id=\"T_ea6b1_row2_col4\" class=\"data row2 col4\" >1.80</td>\n    </tr>\n    <tr>\n      <th id=\"T_ea6b1_level0_row3\" class=\"row_heading level0 row3\" >109</th>\n      <td id=\"T_ea6b1_row3_col0\" class=\"data row3 col0\" >0.50</td>\n      <td id=\"T_ea6b1_row3_col1\" class=\"data row3 col1\" >7.20</td>\n      <td id=\"T_ea6b1_row3_col2\" class=\"data row3 col2\" >3.60</td>\n      <td id=\"T_ea6b1_row3_col3\" class=\"data row3 col3\" >6.10</td>\n      <td id=\"T_ea6b1_row3_col4\" class=\"data row3 col4\" >2.50</td>\n    </tr>\n    <tr>\n      <th id=\"T_ea6b1_level0_row4\" class=\"row_heading level0 row4\" >22</th>\n      <td id=\"T_ea6b1_row4_col0\" class=\"data row4 col0\" >0.44</td>\n      <td id=\"T_ea6b1_row4_col1\" class=\"data row4 col1\" >4.60</td>\n      <td id=\"T_ea6b1_row4_col2\" class=\"data row4 col2\" >3.60</td>\n      <td id=\"T_ea6b1_row4_col3\" class=\"data row4 col3\" >1.00</td>\n      <td id=\"T_ea6b1_row4_col4\" class=\"data row4 col4\" >0.20</td>\n    </tr>\n  </tbody>\n</table>\n"
          }
        },
        "ba4bf2c99a1547d29437c5ae0d168e14": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "980c12756df3430fb85e40d1a86d6b45": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "e5bcce70584e42ccbfd253c4ff23ca04": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "83a498bf8d3f45879435efe3cc46556c": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "a689f5ff46d449efb8e4231627af729d"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.159 seconds)


.. _sphx_glr_download_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_outlier_sample_detection.py <plot_outlier_sample_detection.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_outlier_sample_detection.ipynb <plot_outlier_sample_detection.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
